# Nexus-ai-outreach

./: .env.example  .gitignore  Dockerfile  README.md  RUNNING_LOCALLY.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: content_optimizer_agent.py  email_writer_agent.py  memory_agent.py  personalization_agent.py  research_agent.py  scheduler_agent.py
api/: server.py
frontend/: design-tokens.css  index.html  tailwind-config.js
prompts/: content_optimizer_prompt.py  email_writer_prompt.py  personalization_prompt.py  research_prompt.py
stitch_nexus_ai_outreach_dashboard/cold_outreach_dashboard/: DESIGN.md
stitch_nexus_ai_outreach_dashboard/live_demo_sandbox/: code.html
stitch_nexus_ai_outreach_dashboard/outreach_ai_dashboard/: code.html
stitch_nexus_ai_outreach_dashboard/system_activity_orchestration/: code.html
tests/: conftest.py  test_config.py  test_email_tool.py  test_pipeline.py  test_spam_checker.py
tools/: linkedin_tool.py  spam_checker_tool.py
